# eardo

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: api.rs  lib.rs  pages.rs
app/src/pages/: homepage.rs
server/: Cargo.toml
server/src/: main.rs
style/: tailwind.css
